init: Added bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
+  <h1>This is Bootstrap</h1>
   <p>
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque animi laborum, voluptatem repellat mollitia perferendis et porro nemo expedita dicta eum maiores autem, minus alias aliquid! Hic doloremque, qui omnis maiores quas repellat doloribus.
   </p>
