--- a/src/app/MyComponents/add-todo/add-todo.component.html
+++ b/src/app/MyComponents/add-todo/add-todo.component.html
@@ -1,10 +1,9 @@
-<div class="my-3">
-    <h4>Add a Todo</h4>
-<form (ngSubmit)="onSubmit()">
+<div class="my-3 add-todo">
+  <h4>Add a Todo</h4>
+  <form (ngSubmit)="onSubmit()">
     <div class="mb-3">
       <label for="title" class="form-label">Todo Title</label>
-      <input type="text" [(ngModel)]="title" class="form-control" id="title" name="title" 
-      aria-describedby="emailHelp">
+      <input type="text" [(ngModel)]="title" class="form-control" id="title" name="title" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="desc" class="form-label">Todo Description: </label>
