--- a/src/app/MyComponents/todo-item/todo-item.component.html
+++ b/src/app/MyComponents/todo-item/todo-item.component.html
@@ -1,9 +1,10 @@
 <div class="my-3">
-    <h5 [ngClass]="{'strike': !todo.active}">{{todo.title}}</h5>
-    <p [ngClass]="{'strike': !todo.active}">{{todo.desc}}</p>
-    <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck{{i}}" (click)="onCheckboxClick(todo)" [checked]="!todo.active">
-        <label class="form-check-label" for="exampleCheck{{i}}">Mark as Done</label>
-      </div>
-    <button class="btn btn-sm btn-danger" (click)="OnClick(todo)">Delete</button>
+  <h5 [ngClass]="{'strike': !todo.active}">{{todo.title}}</h5>
+  <p [ngClass]="{'strike': !todo.active}">{{todo.desc}}</p>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck{{i}}" (click)="onCheckboxClick(todo)"
+      [checked]="!todo.active">
+    <label class="form-check-label" for="exampleCheck{{i}}">Mark as Done</label>
+  </div>
+  <button class="btn btn-sm btn-danger" (click)="OnClick(todo)">Delete</button>
 </div>
